test: user model unit testing